@@ -18,7 +18,6 @@
 
 package org.enhydra.jawe.components.graph.actions;
 
-import java.awt.Dimension;
 import java.awt.event.ActionEvent;
 
 import org.enhydra.jawe.ActionBase;
@@ -40,7 +39,7 @@ public class ZoomIn extends ActionBase {
       GraphController gc = (GraphController)jawecomponent;
       
       if (gc.getSelectedGraph() != null)
-         if (gc.getSelectedGraph().getScale() < 2) {
+         if (gc.getSelectedGraph().getScale() < 5) {
             setEnabled(true);
             return;
          }
@@ -52,21 +51,15 @@ public class ZoomIn extends ActionBase {
       Graph selectedGraph=((GraphController)jawecomponent).getSelectedGraph();
       if (selectedGraph==null) return;
       //setResizeAction(null);
-      //editor.setScale(editor.getGraph().getScale()*1.15);
       double scale=selectedGraph.getScale()/0.85;
-      scale = Math.max(Math.min(scale,2),0.1);
+      scale = Math.max(Math.min(scale,5),0.1);
       selectedGraph.setScale(scale);
-      try {
-         Dimension prefSize=selectedGraph.getSize();
-         prefSize.width=(int)(prefSize.width/0.85);
-         prefSize.height=(int)(prefSize.height/0.85);
-         selectedGraph.setPreferredSize(prefSize);
-      } catch (Exception ex) {}
+      selectedGraph.setPreferredSize(selectedGraph.getGraphManager().getGraphsPreferredSize());
 
       // With JGraph3.4.1 this causes problems
-      /*if (editor.getGraph().getSelectionCell() != null) {
-         editor.getGraph().scrollCellToVisible(editor.getGraph().getSelectionCell());
-       }*/
+      if (selectedGraph.getSelectionCell() != null) {
+         selectedGraph.scrollCellToVisible(selectedGraph.getSelectionCell());
+      }
       
       GraphController gc = (GraphController)jawecomponent;
       gc.getSettings().getAction("ZoomIn").getAction().enableDisableAction();      
