@@ -1,6 +1,7 @@
 ###### TWE 5.1-1 RELEASED ######
 2014-06-23 Sasa Bojanic <sasaboy@together.at>
-   # Fixed: transition condition label was not always fully shown 
+   # Fix: transition condition label was not always fully shown 
+   # Fix: scrollbars were missing when Zoom In action was performed and then activity was moved
 
 2014-06-20 Sasa Bojanic <sasaboy@together.at>
    # "CTRL +", "CTRL -" and "CTRL 1" key combination now can be used to "Zoom In", "Zoom Out" and "Make actual size" in the graph.
